https://issues.apache.org/jira/browse/EXTSCRIPT-74
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@916350 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/componentTest.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/componentTest.xhtml
@@ -12,7 +12,13 @@
         <!-- also we need to add some values here -->
         <div class="centerDiv">
             <h:form>
+
+
+
                 <h:panelGroup styleClass="stdBoxBig">
+                    <div style="background-color:white">
+                     rewlktjhwkrejht welrijkhtiewrjgw ietrgheiltw jk
+                    </div>
                     <h:commandLink style="color: white;" value="press me" action="#{javatestbean.doAction}"/>
                     <grv:testcomponent2 testAttr="vvv" testAttr3="Attribute 3 set"
                                         testAttr4="Attribute 4 set and showing"/>
