--- a/examples/myfaces20-example/src/main/webapp/template.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/template.xhtml
@@ -4,7 +4,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:exs="http://myfaces.apache.org/ext-scripting"
       xmlns:h="http://java.sun.com/jsf/html">
-<head>
+<h:head>
 
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
     <title>Myfaces Example Facelets</title>
@@ -12,9 +12,10 @@
     <link type="text/css" rel="stylesheet" href="#{resource['styles:main.css']}"/>
 
 
-</head>
+</h:head>
 
-<body>
+<h:body>
+     aaaa
 <div id="menu">
     <h:panelGroup>
         <h:outputLink value="./helloWorld.jsf">Hello world Example</h:outputLink>
@@ -31,6 +32,7 @@
 </div>
 <div class="centerDiv">
 
+
     <h:panelGroup>
         <h3>
             <h:outputFormat value="Compiler Output" escape="false"/>
@@ -43,6 +45,6 @@
     </p>
 </div>
 
-</body>
+</h:body>
 
 </html>
