https://issues.apache.org/jira/browse/EXTSCRIPT-86
added first version of the history component, works now as it should

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@919197 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/template.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/template.xhtml
@@ -40,6 +40,14 @@
         <exs:compilerOutput errorsLabel="Errors:" warningsLabel="Warnings:" scriptingLanguage=""/>
     </h:panelGroup>
 
+    <h:panelGroup>
+        <h3>
+            <h:outputFormat value="Change History" escape="false"/>
+        </h3>
+        <exs:taintHistory noEntries="5" />
+    </h:panelGroup>
+
+
     <p>
         <ui:insert name="body">Hello World Example!</ui:insert>
     </p>
