--- a/examples/myfaces20-example/src/main/webapp/template.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/template.xhtml
@@ -6,7 +6,7 @@
       xmlns:h="http://java.sun.com/jsf/html">
 <h:head>
 
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Myfaces Example Facelets</title>
 
     <link type="text/css" rel="stylesheet" href="#{resource['styles:main.css']}"/>
