https://issues.apache.org/jira/browse/EXTSCRIPT-91
adding dynamic tag handlers for all important jsf2 tag handler artifacts which can be used by the user...

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@921334 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/componentTest.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/componentTest.xhtml
@@ -24,6 +24,8 @@
                                         testAttr4="Attribute 4 set and showing"/>
 
                 </h:panelGroup>
+
+                <grv:tagHandlertest />
             </h:form>
         </div>
     </ui:define>
