https://issues.apache.org/jira/browse/EXTSCRIPT-97
fixed

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@926524 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/helloWorld2.xhtml
+++ b/examples/myfaces20-example/src/main/webapp/helloWorld2.xhtml
@@ -10,7 +10,7 @@
 <ui:composition template="/template.xhtml">
     <ui:define name="body">
         <h1 style="color: yellow;">
-           <h:outputText value="#{hello.hello}" />  
+           <h:outputText value="#{helloBean.hello}" />  
         </h1>
     </ui:define>
 </ui:composition>
