fixed build for maven3 fixed npe for threading conditions
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@937636 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/myfaces12-example/src/main/webapp/blog.xhtml
+++ b/extscript-examples/myfaces12-example/src/main/webapp/blog.xhtml
@@ -31,7 +31,9 @@
                 <h:inputText value="#{blogView.content}"/>
 
 
-                <h:commandLink action="#{blogView.addEntry}" value="Add Blog"/>
+                <h:commandLink action="#{blogView.addEntry}" value="Add Blog">
+                     <f:ajax execute="@this" render="content"/>
+                </h:commandLink>
             </h:panelGrid>
             <h:panelGrid columns="1">
                 <h:outputText value="Blog Entries"/>
