--- a/extscript-examples/myfaces20-example/src/main/webapp/template.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/template.xhtml
@@ -8,51 +8,43 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Myfaces Example Facelets</title>
-
     <link type="text/css" rel="stylesheet" href="#{resource['styles:main.css']}"/>
-
-
+    <ui:insert name="additionalHeadIncludes">
+    </ui:insert>    
 </h:head>
 
 <h:body>
-    
-<div id="menu">
-    <h:panelGroup>
-        <h:outputLink value="./helloWorld.jsf">Hello world Example</h:outputLink>
-        <h:outputLink value="./blog.jsf">Groovy Blogging Example</h:outputLink>
-        <h:outputLink value="./javablog.jsf">Java Blogging Example</h:outputLink>
-        <h:outputLink value="./componentTest.jsf">Component Testcase</h:outputLink>
-        <h:outputLink value="./compilerWindow.jsf" target="_blank">Compiler Output</h:outputLink>
+    <div id="menu">
+        <h:panelGroup>
+            <h:outputLink value="./helloWorld.jsf">Hello world Example</h:outputLink>
+            <h:outputLink value="./blog.jsf">Groovy Blogging Example</h:outputLink>
+            <h:outputLink value="./javablog.jsf">Java Blogging Example</h:outputLink>
+            <h:outputLink value="./componentTest.jsf">Component Testcase</h:outputLink>
+            <h:outputLink value="./compilerWindow.jsf" target="_blank">Compiler Output</h:outputLink>
 
-    </h:panelGroup>
-</div>
+        </h:panelGroup>
+    </div>
 
-<div id="backGroundFloat">
+    <div id="backGroundFloat">
+    </div>
+    <div class="centerDiv">
+        <h:panelGroup>
+            <h3>
+                <h:outputFormat value="Compiler Output" escape="false"/>
+            </h3>
+            <exs:compilerOutput errorsLabel="Errors:" warningsLabel="Warnings:" scriptingLanguage=""/>
+        </h:panelGroup>
+        <h:panelGroup>
+            <h3>
+                <h:outputFormat value="Change History" escape="false"/>
+            </h3>
+            <exs:taintHistory noEntries="5"/>
+        </h:panelGroup>
 
-</div>
-<div class="centerDiv">
-
-
-    <h:panelGroup>
-        <h3>
-            <h:outputFormat value="Compiler Output" escape="false"/>
-        </h3>
-        <exs:compilerOutput errorsLabel="Errors:" warningsLabel="Warnings:" scriptingLanguage=""/>
-    </h:panelGroup>
-
-    <h:panelGroup>
-        <h3>
-            <h:outputFormat value="Change History" escape="false"/>
-        </h3>
-        <exs:taintHistory noEntries="5" />
-    </h:panelGroup>
-
-
-    <p>
-        <ui:insert name="body">Hello World Example!</ui:insert>
-    </p>
-</div>
-
+        <p>
+            <ui:insert name="body">Hello World Example!</ui:insert>
+        </p>
+    </div>
 </h:body>
 
 </html>
