--- a/extscript-examples/myfaces20-example/src/main/webapp/complexBean.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/complexBean.xhtml
@@ -2,29 +2,19 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html">
-<head>
+<h:head>
     <title>Hello World</title>
-</head>
+</h:head>
 <h:body>
-
-
-        <h1> this example tests complex bean relationships for refreshing</h1>
-        <h:form id="myForm">
-            <h:outputScript name="jsf.js" library="javax.faces" target="head"/>
-
-
-            <h:inputText value="#{myBean.test}">
-                <f:ajax render="#{myBean.bindingMyTest.clientId}" event="keyup"/>
-            </h:inputText>
-            <h:inputText id="myText" value="#{myBean.test}" binding="#{myBean.bindingMyTest}"/>
-
-
-            <h:outputText value="#{receiver.myBean.hello}" />
-            <h:outputText value="#{receiver.myBean.secondaryBean.hello}" />
-
-
-        </h:form>
-
-
+    <h1><h:outputFormat value="This example tests complex bean relationships for refreshing"/></h1>
+    <h:form id="myForm">
+        <h:outputScript name="jsf.js" library="javax.faces" target="head"/>
+        <h:inputText value="#{myBean.test}">
+            <f:ajax render="#{myBean.bindingMyTest.clientId}" event="keyup"/>
+        </h:inputText>
+        <h:inputText id="myText" value="#{myBean.test}" binding="#{myBean.bindingMyTest}"/>
+        <h:outputText value="#{receiver.myBean.hello}"/>
+        <h:outputText value="#{receiver.myBean.secondaryBean.hello}"/>
+    </h:form>
 </h:body>
 </html>
