--- a/extscript-examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
@@ -2,7 +2,10 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:grv="http://myfaces.apache.org/groovy">
+      xmlns:grv="http://myfaces.apache.org/groovy"
+      xmlns:g="http://java.sun.com/jsf/composite/greet"
+           
+        >
 <head>
     <title>Hello World</title>
 </head>
@@ -18,6 +21,9 @@
                 <h:panelGroup styleClass="stdBox">
                     <h:messages/>
                     <h3>Validator Test 1</h3>
+
+                    <g:greet2 who="hello world from composite" />
+
                     <h:outputText id="output1" value="Please enter your name"/>
                     <h:outputText value="#{javatestbean4.hello}"/>
                     <h:inputText id="input1" value="#{helloWorld.name}" required="true">
