--- a/extscript-examples/spring-example/src/main/webapp/helloWorld.xhtml
+++ b/extscript-examples/spring-example/src/main/webapp/helloWorld.xhtml
@@ -14,16 +14,18 @@
         <h:form id="form">
             <h:panelGrid id="grid" columns="2">
                 <h:outputText id="output1" value="Please enter your name"/>
+                 <h:outputText id="input1x" value="#{helloWorldBacking.springBean.value}" />
                 <h:inputText id="input1" value="#{helloWorldBacking.name}"
                              required="true"/>
                 <h:commandButton id="button1" value="press me"
                                  action="#{helloWorldBacking.send}"/>
                 <h:message id="message1" for="input1"/>
 
-
+                <!--
                 <h:outputText value="#{groovyBean.value}"/>
 
                 <h:outputText value="#{groovyBean.secondBean.value}"/>
+                -->
             </h:panelGrid>
         </h:form>
     </ui:define>
