--- a/extscript-examples/myfaces20-example/src/main/webapp/javablog.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/javablog.xhtml
@@ -2,7 +2,8 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:t="http://myfaces.apache.org/tomahawk" xmlns:grv="http://myfaces.apache.org/groovy">
+      xmlns:t="http://myfaces.apache.org/tomahawk" xmlns:grv="http://myfaces.apache.org/groovy"
+        xmlns:c="http://java.sun.com/jsp/jstl/core">
 <h:head>
     <title>Hello World</title>
 </h:head>
@@ -35,12 +36,12 @@
                     </h:panelGrid>
                     <hr/>
                     <h:commandButton styleClass="btn" action="#{javaBlogView.addEntry}" value="Add Blog Entry">
-                        <f:ajax execute="@form" render="content"/>
+                         <f:ajax execute="@form" render="content" />
                     </h:commandButton>
                 </h:panelGrid>
             </div>
             <h:panelGrid id="content" columns="1" styleClass="right">
-                <ui:repeat value="#{javaBlogService.blogEntries}" var="item">
+                <c:forEach items="#{javaBlogService.blogEntries}" var="item">
                     <h:panelGrid columns="1" styleClass="messageBox">
                         <h:panelGroup styleClass="topic">
                             <h:outputLabel styleClass="label" value="Topic"/>
@@ -52,7 +53,7 @@
                         </h:panelGroup>
                     </h:panelGrid>
                     <br/>
-                </ui:repeat>
+                </c:forEach>
             </h:panelGrid>
         </h:form>
     </ui:define>
