https://issues.apache.org/jira/browse/EXTSCRIPT-144
reverting back to snapshot for the myfaces reference, finishing the demos for 1.0



git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@997739 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
@@ -11,9 +11,11 @@
 </head>
 <body>
 <ui:composition template="/template.xhtml">
+
     <ui:define name="body">
         <h1>
-            <ui:insert name="title">Ext-Scripting General Example</ui:insert>
+            <ui:insert name="title">Ext-Scripting General Example
+           </ui:insert>
         </h1>
 
         <h:form id="form">
