--- a/extscript-examples/myfaces20-example/src/main/webapp/helloWorld2.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/helloWorld2.xhtml
@@ -10,7 +10,8 @@
     <ui:composition template="/template.xhtml">
         <ui:define name="body">
             <h1 style="color: yellow;">
-                <h:outputText value="#{helloBean.hello}"/>
+           
+                <h:outputText value="instant bean result #{helloBean.hello}"/>
             </h1>
         </ui:define>
     </ui:composition>
