https://issues.apache.org/jira/browse/EXTSCRIPT-144
reverting back to snapshot for the myfaces reference, finishing the demos for 1.0



git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@997743 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/myfaces20-example/src/main/webapp/mainpage.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/mainpage.xhtml
@@ -43,8 +43,8 @@
 
         </h:panelGrid>
 
-        <h:panelGroup styleClass="stdBoxBig">
-            <object width="800" height="600">
+        <h:panelGroup styleClass="stdBoxBig" style="width: 810px;">
+            <object width="800" height="600" style="margin-left: 5px;" >
                 <param name="movie"
                        value="http://www.youtube.com/v/g2YvzOloNyI&#38;hl=de_DE&#38;fs=1&#38;border=1"></param>
                 <param name="allowFullScreen" value="true"></param>
