https://issues.apache.org/jira/browse/EXTSCRIPT-144
adding descriptors


git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@998087 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/myfaces20-example/src/main/webapp/blog.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/blog.xhtml
@@ -16,6 +16,14 @@
         <h1>
             <ui:insert name="title">Ext-Scripting Groovy Blog Example</ui:insert>
         </h1>
+
+        <h:panelGroup styleClass="stdBoxBig" style="color:black;">
+            <h2>In this example you can blog simply by entering text in the fields below and send submit</h2>
+
+            <p>You can change the blogging artifacts on the fly, all the sources can be found under
+                <b>WEB-INF/java/org/apache/myfaces/javaloader/groovy/</b> in your deployment directory</p>
+
+        </h:panelGroup>
         <h:form id="form">
             <div class="left" style="margin-top: 3px;">
                 <h:panelGrid id="grid" columns="1" styleClass="stdBox">
