--- a/extscript-examples/myfaces20-example/src/main/webapp/compilerWindow.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/compilerWindow.xhtml
@@ -15,6 +15,13 @@
     <ui:define name="body">
         <!-- also we need to add some values here -->
         <div class="centerDiv">
+            <h:panelGroup styleClass="stdBoxBig" style="color:black;">
+                <h2>Ext-Scripting Compiler Window</h2>
+
+                <p>This page shows the compiler output window and refresh history.</p>
+
+            </h:panelGroup>
+
             <h:form>
                 <h:outputLink style="margin-left: 10px; color: white; font-weight: bold;"
                               value="./compilerWindow.jsf">Refresh Compiler output &gt;&gt;</h:outputLink>
