--- a/extscript-examples/myfaces20-example/src/main/webapp/componentTest.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/componentTest.xhtml
@@ -11,6 +11,18 @@
     <ui:define name="body">
         <!-- also we need to add some values here -->
         <div class="centerDiv">
+
+            <h:panelGroup  styleClass="stdBoxBig" style="color:black;">
+                <h2>Simple Component Testcase</h2>
+
+                <p>This testcase simulates the dynamic component development. You can edit the renderer
+                and the component on the fly, then it refresh and watch the instant changes,
+                you also can move the component annotations around between the classes.</p>
+
+                <p>The sources can be found under:<b>WEB-INF/java/org/apache/myfaces/javaloader/componentTest/</b>  </p>
+            </h:panelGroup>
+
+
             <h:form>
                 <h:panelGroup styleClass="stdBoxBig">
 
