--- a/extscript-examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
@@ -4,7 +4,7 @@
       xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
       xmlns:grv="http://myfaces.apache.org/groovy"
       xmlns:g="http://java.sun.com/jsf/composite/greet"
-           
+
         >
 <head>
     <title>Hello World</title>
@@ -15,16 +15,27 @@
     <ui:define name="body">
         <h1>
             <ui:insert name="title">Ext-Scripting General Example
-           </ui:insert>
+            </ui:insert>
         </h1>
+
+
+        <h:panelGroup styleClass="stdBoxBig" style="color:black;">
+            <h2>Hello to Apache MyFaces Extension Scripting</h2>
+
+            <p>This is a testpage which tests the various aspects of the dynamic reloading of Apache MyFaces Extension Scripting.
+            </p>
+
+            <p>The sources for this example can be found under:<b>WEB-INF/ ...</b></p>
+        </h:panelGroup>
 
         <h:form id="form">
             <h:panelGroup styleClass="left">
                 <h:panelGroup styleClass="stdBox">
                     <h:messages/>
+
                     <h3>Validator Test 1</h3>
 
-                    <g:greet2 who="hello world from composite" />
+                    <g:greet2 who="hello world from composite"/>
 
                     <h:outputText id="output1" value="Please enter your name"/>
                     <h:outputText value="#{javatestbean4.hello}"/>
