--- a/extscript-examples/myfaces20-example/src/main/webapp/javablog.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/javablog.xhtml
@@ -3,24 +3,40 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
       xmlns:t="http://myfaces.apache.org/tomahawk" xmlns:grv="http://myfaces.apache.org/groovy"
-        xmlns:c="http://java.sun.com/jsp/jstl/core">
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 <h:head>
     <title>Hello World</title>
 </h:head>
+
 <body>
 <ui:composition template="/template.xhtml">
 
     <ui:define name="body">
         <h:outputScript name="jsf.js" library="javax.faces"
-            target="head"/>
+                        target="head"/>
+
         <h1>
-            <ui:insert name="title">Ext-Scripting Javablog Example</ui:insert>
+            <ui:insert name="title">
+                Ext-Scripting Javablog Example
+
+            </ui:insert>
         </h1>
+        <h:panelGroup  styleClass="stdBoxBig" style="color:black;">
+            <h2>In this example you can blog simply by entering text in the fields below and send submit</h2>
+
+            <p>You can change the blogging artifacts on the fly, all the sources can be found under
+                <b>WEB-INF/java/org/apache/myfaces/javaloader/blog/</b> in your deployment directory</p>
+
+        </h:panelGroup>
+
         <h:form id="form">
             <div class="left" style="margin-top: 3px;">
+
+
                 <h:panelGrid id="grid" columns="1" styleClass="stdBox">
+
                     <h:outputFormat id="title1" escape="false" styleClass="title" value="#{javaBlogView.title}"/>
-                    <h:outputFormat id="title11" escape="false"  styleClass="title1" value="#{javaBlogView.title1}"/>
+                    <h:outputFormat id="title11" escape="false" styleClass="title1" value="#{javaBlogView.title1}"/>
                     <hr/>
                     <h:panelGrid columns="2" columnClasses="label, input">
                         <h:outputText value="First Name"/>
@@ -36,7 +52,7 @@
                     </h:panelGrid>
                     <hr/>
                     <h:commandButton styleClass="btn" action="#{javaBlogView.addEntry}" value="Add Blog Entry">
-                         <f:ajax execute="@form" render="content" />
+                        <f:ajax execute="@form" render="content"/>
                     </h:commandButton>
                 </h:panelGrid>
             </div>
