https://issues.apache.org/jira/browse/EXTSCRIPT-144
change to java5 as base api
and adding a better display string in the testbean

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1038143 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/myfaces20-example/src/main/webapp/mainpage.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/mainpage.xhtml
@@ -21,7 +21,7 @@
                 <h2>Documentation</h2>
 
                 <h:outputLink target="_new"
-                              value="http://people.apache.org/~werpu/ext-script-site/">Extension Scripting Documentation</h:outputLink>
+                              value="http://people.apache.org/~werpu/ext-script-site">Extension Scripting Documentation</h:outputLink>
 
 
                 <h2>Demo and Testing Links</h2>
