https://issues.apache.org/jira/browse/EXTSCRIPT-151 Code now compatible with the latest myfaces versions
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1230665 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/helloWorld.xhtml
@@ -40,7 +40,8 @@
         <h:panelGroup styleClass="stdBoxBig" style="color:black;">
             <h2>Hello to Apache MyFaces Extension Scripting</h2>
 
-            <p>This is a testpage which tests the various aspects of the dynamic reloading of Apache MyFaces Extension Scripting.
+            <p>This is a testpage which tests the various aspects of the dynamic reloading of Apache MyFaces
+                Extension Scripting.
             </p>
 
             <p>The sources for this example can be found under:<b>WEB-INF/ ...</b></p>
