--- a/extscript-examples/myfaces20-example/src/main/webapp/mainpage.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/mainpage.xhtml
@@ -32,7 +32,7 @@
 <ui:composition template="/template.xhtml">
 
     <ui:define name="body">
-        <h1>Hello from Apache MyFaces Extension Scripting</h1>
+        <h1>Hello from Apache MyFaces Extension Scripting  #{javatestbean.sayHello}</h1>
         <h:panelGrid columns="2" columnClasses="celltop, celltop">
 
 
