https://issues.apache.org/jira/browse/EXTSCRIPT-158 moving to jetty 8 and isolating the blogging example for easier debugging
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1302412 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/myfaces20-example/src/main/webapp/javablog.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/javablog.xhtml
@@ -75,7 +75,7 @@
                 </h:panelGrid>
             </div>
             <h:panelGrid id="content" columns="1" styleClass="right">
-                <c:forEach items="#{javaBlogService.blogEntries}" var="item">
+                <ui:repeat value="#{javaBlogService.blogEntries}" var="item">
                     <h:panelGrid columns="1" styleClass="messageBox">
                         <h:panelGroup styleClass="topic">
                             <h:outputLabel styleClass="label" value="Topic"/>
@@ -86,8 +86,7 @@
                             <h:outputFormat escape="false" value="#{item.content}"/>
                         </h:panelGroup>
                     </h:panelGrid>
-                    <br/>
-                </c:forEach>
+                </ui:repeat>
             </h:panelGrid>
         </h:form>
     </ui:define>
