--- a/extscript-examples/blog-example/src/main/webapp/javablog.xhtml
+++ b/extscript-examples/blog-example/src/main/webapp/javablog.xhtml
@@ -18,58 +18,63 @@
  * specific language governing permissions and limitations
  * under the License.
 -->
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:t="http://myfaces.apache.org/tomahawk"
-      xmlns:grv="http://myfaces.apache.org/groovy"
-        xmlns:c="http://java.sun.com/jsp/jstl/core">
-<head>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
+<h:head>
     <title>Hello World</title>
-</head>
+</h:head>
+
 <body>
 <ui:composition template="/template.xhtml">
-    <ui:define name="body">
-        <h1>
-            <ui:insert name="title">Ext-Scripting Groovy Blog Example</ui:insert>
-        </h1>
 
-        <h:panelGroup styleClass="stdBoxBig" style="color:black;">
+    <ui:define name="body">
+        <h:outputScript name="jsf.js" library="javax.faces"
+                        target="head"/>
+
+        <h1>
+            <ui:insert name="title">
+                Ext-Scripting Javablog Example
+
+            </ui:insert>
+        </h1>
+        <h:panelGroup  styleClass="stdBoxBig" style="color:black;">
             <h2>In this example you can blog simply by entering text in the fields below and send submit</h2>
 
             <p>You can change the blogging artifacts on the fly, all the sources can be found under
-                <b>WEB-INF/java/org/apache/myfaces/javaloader/groovy/</b> in your deployment directory</p>
+                <b>WEB-INF/java/org/apache/myfaces/javaloader/blog/</b> in your deployment directory</p>
 
         </h:panelGroup>
+
         <h:form id="form">
             <div class="left" style="margin-top: 3px;">
+
+
                 <h:panelGrid id="grid" columns="1" styleClass="stdBox">
-                    <h:outputText id="title1" styleClass="title" value="#{blogView.title}"/>
-                    <h:outputText id="title11" styleClass="title1" value="#{blogView.title1}"/>
 
+                    <h:outputFormat id="title1" escape="false" styleClass="title" value="#{javaBlogView.title}"/>
+                    <h:outputFormat id="title11" escape="false" styleClass="title1" value="#{javaBlogView.title1}"/>
                     <hr/>
-
                     <h:panelGrid columns="2" columnClasses="label, input">
                         <h:outputText value="First Name"/>
-                        <h:inputText value="#{blogView.firstName}"/>
+                        <h:inputText value="#{javaBlogView.firstName}"/>
                         <h:outputText value="Last Name"/>
-                        <h:inputText value="#{blogView.lastName}"/>
+                        <h:inputText value="#{javaBlogView.lastName}"/>
                         <h:outputText value="Topic of entry"/>
-                        <h:inputText value="#{blogView.topic}"/>
+                        <h:inputText value="#{javaBlogView.topic}"/>
                     </h:panelGrid>
                     <h:panelGrid columns="2" columnClasses="label, input">
                         <h:outputText styleClass="label" value="Content"/>
-                        <h:inputText value="#{blogView.content}"/>
+                        <h:inputTextarea value="#{javaBlogView.content}"/>
                     </h:panelGrid>
                     <hr/>
-                    <h:commandButton styleClass="btn" action="#{blogView.addEntry}" value="Add Blog Entry">
-                        <f:ajax execute="@form" render="content" />
+                    <h:commandButton styleClass="btn" action="#{javaBlogView.addEntry}" value="Add Blog Entry">
+                        <f:ajax execute="@form" render="content"/>
                     </h:commandButton>
                 </h:panelGrid>
             </div>
             <h:panelGrid id="content" columns="1" styleClass="right">
-                <ui:repeat value="#{blogService.blogEntries}" var="item">
+                <ui:repeat value="#{javaBlogService.blogEntries}" var="item">
                     <h:panelGrid columns="1" styleClass="messageBox">
                         <h:panelGroup styleClass="topic">
                             <h:outputLabel styleClass="label" value="Topic"/>
@@ -80,7 +85,6 @@
                             <h:outputFormat escape="false" value="#{item.content}"/>
                         </h:panelGroup>
                     </h:panelGrid>
-                    <br/>
                 </ui:repeat>
             </h:panelGrid>
         </h:form>
