EXTSCRIPT-159: Add scala language support if possible: scala support now working
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1302908 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/blog-example/src/main/webapp/blog.xhtml
+++ b/extscript-examples/blog-example/src/main/webapp/blog.xhtml
@@ -36,6 +36,7 @@
         </h1>
 
         <h:panelGroup styleClass="stdBoxBig" style="color:black;">
+            <h1>#{scalaTestBean.title}</h1>
             <h2>In this example you can blog simply by entering text in the fields below and send submit</h2>
 
             <p>You can change the blogging artifacts on the fly, all the sources can be found under
