EXTSCRIPT-167 removing web.xml junk, changing the documentation link in the demo
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1370199 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/myfaces20-example/src/main/webapp/mainpage.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/mainpage.xhtml
@@ -40,7 +40,7 @@
                 <h2>Documentation</h2>
 
                 <h:outputLink target="_new"
-                              value="http://people.apache.org/~werpu/ext-script-site/index.html">Extension Scripting Documentation</h:outputLink>
+                              value="http://myfaces.apache.org/extensions/scripting/index.html">Extension Scripting Documentation</h:outputLink>
 
 
                 <h2>Demo and Testing Links</h2>
