--- a/extscript-examples/myfaces20-extscript-helloworld/src/main/webapp/helloWorld.xhtml
+++ b/extscript-examples/myfaces20-extscript-helloworld/src/main/webapp/helloWorld.xhtml
@@ -26,7 +26,6 @@
     <title>Hello World</title>
 </h:head>
 <h:body>
-    <h:outputText value="#{javaHello.helloWorld}" />
-    <h:outputText value="#{groovyHello.helloWorld}" />
+    <h:outputFormat value="hello world" />
 </h:body>
 </html>
