https://issues.apache.org/jira/browse/EXTSCRIPT-177
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1400851 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/myfaces20-example/src/main/webapp/complexBean.xhtml
+++ b/extscript-examples/myfaces20-example/src/main/webapp/complexBean.xhtml
@@ -33,6 +33,7 @@
         <h:inputText id="myText" value="#{myBean.test}" binding="#{myBean.bindingMyTest}"/>
         <h:outputText value="#{receiver.myBean.hello}"/>
         <h:outputText value="#{receiver.myBean.secondaryBean.hello}"/>
+        <h:outputText value="#{helloJRubyBean.helloWorld}" />
     </h:form>
 </h:body>
 </html>
