EXTSCRIPT-44: adding a ruby bean to the spring config to show the multlanguage capabilities of the system
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1402022 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/spring-example/src/main/webapp/home.xhtml
+++ b/extscript-examples/spring-example/src/main/webapp/home.xhtml
@@ -29,6 +29,7 @@
      <h1>
       <h:outputText value="From JSF: The greeter says '#{greeter.greeting}' to '#{person.name}'."/> <br/>
       <h:outputText value="From JSF: The greeter says '#{greeter.anotherGreeting}'."/> <br/>
+      <h:outputText value="From JSF and Ruby: The ruby bean says '#{rubyBean.helloWorld}'" /> <br/>
      </h1>
 
      <h:form id="helloForm">
