https://issues.apache.org/jira/browse/EXTSCRIPT-182 moving the entire myfaces related classes into their own subproject with their own SPI infrastructure, that way we can support mojarra in the long run
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1407455 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/myfaces20-extscript-helloworld/src/main/webapp/helloWorld.xhtml
+++ b/extscript-examples/myfaces20-extscript-helloworld/src/main/webapp/helloWorld.xhtml
@@ -26,6 +26,8 @@
     <title>Hello World</title>
 </h:head>
 <h:body>
-    <h:outputFormat value="hello world" />
+    <h:outputFormat value="hello world: #{javaHello.helloWorld}" />
+    <br />
+    <h:outputFormat value="hello world: #{groovyHello.helloWorld}" />
 </h:body>
 </html>
