--- a/extscript-examples/myfaces20-extscript-helloworld/src/main/webapp/helloWorld.xhtml
+++ b/extscript-examples/myfaces20-extscript-helloworld/src/main/webapp/helloWorld.xhtml
@@ -18,16 +18,17 @@
  * specific language governing permissions and limitations
  * under the License.
 -->
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
+<html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
         >
 <h:head>
     <title>Hello World</title>
 </h:head>
 <h:body>
-    <h:outputFormat value="hello world: #{javaHello.helloWorld}" />
-    <br />
-    <h:outputFormat value="hello world: #{groovyHello.helloWorld}" />
+    <h:outputFormat value="hello world: #{javaHello.helloWorld}"/>
+    <br/>
+    <h:outputFormat value="hello world: #{groovyHello.helloWorld}"/>
+    <br/>
+    <h:outputFormat value="hello world: #{scalaHello.helloWorld}"/>
 </h:body>
 </html>
